--- a/src/server/package.json
+++ b/src/server/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.3"
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "node-localstorage": "^2.2.1"
   }
 }
